# NixChirp

./: .gitignore  LICENSE  README.md  io.github.nixchirp.NixChirp.yml  pyproject.toml  requirements.txt
docs/: ROADMAP.md
docs/plans/: 2026-02-20-phase5-hotkeys-sleep-design.md
nixchirp/: __init__.py  __main__.py  app.py  config.py  constants.py
nixchirp/assets/: cache.py  decoder.py  loader.py
nixchirp/data/: io.github.nixchirp.NixChirp.desktop  io.github.nixchirp.NixChirp.metainfo.xml
nixchirp/data/examples/: alex_profile.toml
nixchirp/gui/: file_browser.py  general_panel.py  hotkeys_panel.py  imgui_sdl2.py  mic_panel.py  midi_panel.py  output_panel.py  overlay.py  states_panel.py
nixchirp/input/: hotkeys.py  idle.py  mic.py  midi.py
nixchirp/render/: gl_renderer.py  shaders.py  virtual_cam.py  window.py
nixchirp/shaders/: chroma.frag  crossfade.frag  passthrough.frag
nixchirp/state/: machine.py  state.py  transitions.py
nixchirp/util/: audio.py  platform.py
profiles/: example.toml
